# cpp-xmltooling

./: .autotools  .cdtproject  .cproject  .gitignore  .project  Makefile.am  Portfile  Portfile.in  acinclude.m4  acx_pthread.m4  bootstrap  checkinstall  config_win32.h  configure.ac  cpp-xmltooling.sln  depend  doxyfile  doxygen.cfg  libtool.m4  pkginfo.in  postinstall  xmltooling-lite.pc.in  xmltooling.pc.in  xmltooling.spec.in
doc/: .gitignore  Makefile.am  NOTICE.txt  README.txt
doc/api/: README.txt
schemas/: .gitignore  Makefile.am  catalog.xml.in  xenc-schema.xsd  xmldsig-core-schema.xsd  xmldsig11-schema.xsd  xmltooling.xsd
xmltooling/: .gitignore  AbstractAttributeExtensibleXMLObject.cpp  AbstractAttributeExtensibleXMLObject.h  AbstractChildlessElement.cpp  AbstractChildlessElement.h  AbstractComplexElement.cpp  AbstractComplexElement.h  AbstractDOMCachingXMLObject.cpp  AbstractDOMCachingXMLObject.h  AbstractElementProxy.cpp  AbstractElementProxy.h  AbstractExtensibleXMLObject.cpp  AbstractExtensibleXMLObject.h  AbstractSimpleElement.cpp  AbstractSimpleElement.h  AbstractXMLObject.cpp  AbstractXMLObject.h  AbstractXMLObjectBuilder.h  AttributeExtensibleXMLObject.h  ConcreteXMLObjectBuilder.h  DOMCachingXMLObject.h  ElementExtensibleXMLObject.h  ElementProxy.h  ExtensibleXMLObject.h  ILockable.h  Lockable.cpp  Lockable.h  Makefile.am  Namespace.cpp  Namespace.h  PluginManager.h  QName.cpp  QName.h  SimpleElement.h  XMLObject.h  XMLObjectBuilder.cpp  XMLObjectBuilder.h  XMLToolingConfig.cpp  XMLToolingConfig.h  base.h  (+19 more)
xmltooling/encryption/: Decrypter.h  EncryptedKeyResolver.h  Encrypter.h  Encryption.h
xmltooling/encryption/impl/: Decrypter.cpp  EncryptedKeyResolver.cpp  Encrypter.cpp  EncryptionImpl.cpp  EncryptionSchemaValidators.cpp
xmltooling/impl/: AnyElement.cpp  AnyElement.h  MemoryStorageService.cpp  UnknownElement.cpp  UnknownElement.h
xmltooling/io/: AbstractXMLObjectMarshaller.cpp  AbstractXMLObjectMarshaller.h  AbstractXMLObjectUnmarshaller.cpp  AbstractXMLObjectUnmarshaller.h  GenericRequest.h  GenericResponse.h  HTTPRequest.cpp  HTTPRequest.h  HTTPResponse.cpp  HTTPResponse.h  Marshaller.cpp  Marshaller.h  Unmarshaller.cpp  Unmarshaller.h
xmltooling/security/: AbstractPKIXTrustEngine.h  BasicX509Credential.h  CachingKeyResolver.h  ChainingTrustEngine.h  Credential.h  CredentialContext.h  CredentialCriteria.h  CredentialResolver.h  DataSealer.h  KeyInfoCredentialContext.h  KeyInfoResolver.h  KeyInfoSource.h  KeyResolver.h  OpenSSLCredential.h  OpenSSLCredentialResolver.h  OpenSSLCryptoX509CRL.h  OpenSSLPathValidator.h  OpenSSLSecurityHelper.h  OpenSSLTrustEngine.h  PKIXPathValidatorParams.h  PathValidator.h  SecurityHelper.h  SignatureTrustEngine.h  TrustEngine.h  X509Credential.h  X509TrustEngine.h  XSECCryptoX509CRL.h
xmltooling/security/impl/: AbstractPKIXTrustEngine.cpp  BasicX509Credential.cpp  ChainingCredentialResolver.cpp  ChainingTrustEngine.cpp  Credential.cpp  CredentialCriteria.cpp  CredentialResolver.cpp  DataSealer.cpp  DummyCredentialResolver.cpp  ExplicitKeyTrustEngine.cpp  FilesystemCredentialResolver.cpp  InlineKeyResolver.cpp  KeyInfoResolver.cpp  KeyResolver.cpp  ManagedResource.h  OpenSSLCryptoX509CRL.cpp  OpenSSLCryptoX509CRL.h  OpenSSLSecurityHelper.cpp  OpenSSLSupport.cpp  OpenSSLSupport.h  PKIXPathValidator.cpp  SecurityHelper.cpp  StaticDataSealerKeyStrategy.cpp  StaticPKIXTrustEngine.cpp  TrustEngine.cpp  VersionedDataSealerKeyStrategy.cpp  XSECCryptoX509CRL.cpp
xmltooling/signature/: CachingKeyResolver.h  ContentReference.h  CredentialResolver.h  KeyInfo.h  KeyResolver.h  OpenSSLCredentialResolver.h  Signature.h  SignatureValidator.h  SigningContext.h  VerifyingContext.h
xmltooling/soap/: HTTPSOAPTransport.h  OpenSSLSOAPTransport.h  SOAP.h  SOAPClient.h  SOAPTransport.h
xmltooling/util/: CloneInputStream.cpp  CloneInputStream.h  CredentialResolver.h  CurlNetAccessor.cpp  CurlNetAccessor.h  CurlNetAccessor.hpp  CurlURLInputStream.cpp  CurlURLInputStream.h  CurlURLInputStream.hpp  DataSealer.cpp  DataSealer.h  DateTime.cpp  DateTime.h  DirectoryWalker.cpp  DirectoryWalker.h  NDC.cpp  NDC.h  PThreads.cpp  ParserPool.cpp  ParserPool.h  PathResolver.cpp  PathResolver.h  Predicates.h  ReloadableXMLFile.cpp  ReloadableXMLFile.h  ReplayCache.cpp  ReplayCache.h  StorageService.cpp  StorageService.h  TemplateEngine.cpp  TemplateEngine.h  Threads.h  URLEncoder.cpp  URLEncoder.h  Win32Threads.cpp  XMLConstants.cpp  XMLConstants.h  XMLHelper.cpp  XMLHelper.h  XMLObjectChildrenList.h
xmltooling/validation/: AbstractValidatingXMLObject.cpp  AbstractValidatingXMLObject.h  ValidatingXMLObject.h  Validator.cpp  Validator.h  ValidatorSuite.cpp  ValidatorSuite.h
xmltoolingtest/: .gitignore  BadKeyInfoTest.h  BadKeyKeyInfoTest.h  CloneInputStreamTest.h  ComplexXMLObjectTest.h  DataSealerTest.h  DateTimeTest.h  DirectoryWalkerTest.h  EncryptionTest.h  ExceptionTest.h  ExplicitKeyTrustEngineTest.h  FilesystemCredentialResolverTest.h  InlineKeyResolverTest.h  KeyInfoTest.h  Makefile.am  MarshallingTest.h  MemoryStorageServiceTest.h  NonVisibleNamespaceTest.h  OpenSSL1_1Test.h  PKIXEngineTest.h  SOAPTest.h  SecurityHelperTest.h  SignatureTest.h  TemplateEngineTest.h  UnknownTest.h  UnmarshallingTest.h  XMLObjectBaseTestCase.h  xmltoolingtest.h  xmltoolingtest.vcproj  xmltoolingtest.vcxproj  xmltoolingtest.vcxproj.filters
xmltoolingtest/data/: ComplexXMLObject.xml  DERValueBad.xml  DERValueBad64.xml  DERValueNull.xml  DSABadCounter.xml  DSABadP.xml  DSABadQ.xml  DSABadSeedCounter.xml  DSABadSeedCounter64.xml  DSABadY.xml  DSANoG.xml  DSANoQ.xml  DSANoY.xml  DSANullJ.xml  DSANullP.xml  DSANullQP.xml  DSANullSeed.xml  DSANullY.xml  DTD.xml  ECBadKey64.xml  ECNoKey.xml  ECNullCurve.xml  ECParamGnB.xml  ECParamNone.xml  ECParamPnB.xml  ECParamPrime.xml  ECParamTnB.xml  ExplicitKeyTrustEngine.xml  FilesystemCredentialResolver.xml  FilesystemCredentialResolverCertOnly.xml  IgnoreCase.xml  InlineKeyResolver.xml  KeyInfo1.xml  KeyInfo2.xml  KeyInfo3.xml  KeyInfo4.xml  KeyInfo5.xml  KeyInfoEC.xml  RSABadMod64.xml  RSANullBoth.xml  (+19 more)
(+130 files in other folders)
